<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.mizule.mizule.dataClass.userDataClass.User" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:padding="@dimen/screen_padding"
        tools:context=".screens.auth.SignupActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textSize="@dimen/default_font_size" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_input"
                android:hint="@string/email_example"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="15dp"
                android:paddingVertical="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/default_font_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/password"
                android:textColor="@color/white"
                android:textSize="@dimen/default_font_size" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_input"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:paddingHorizontal="15dp"
                android:paddingVertical="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/default_font_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/confirm_password"
                android:textColor="@color/white"
                android:textSize="@dimen/default_font_size" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_input"
                android:hint="@string/re_enter_password"
                android:inputType="textPassword"
                android:paddingHorizontal="15dp"
                android:paddingVertical="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/default_font_size" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/signupPost"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                app:cardCornerRadius="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/sign_up"
                    android:textColor="@color/black"
                    android:textSize="@dimen/default_font_size"
                    android:textStyle="bold" />
            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/signinRedirect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
