<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none"
    tools:context=".screens.zulespot.UpdateZuleActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        tools:context=".screens.zulespot.CreateZule">


        <include
            android:id="@+id/include"
            layout="@layout/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_zule"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="@dimen/default_font_size" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/custom_input"
            android:hint="@string/enter_your_zule_tile"
            android:inputType="text"
            android:paddingHorizontal="15dp"
            android:paddingVertical="20dp"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/default_font_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/description"
            android:textColor="@color/white"
            android:textSize="@dimen/default_font_size" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/custom_input"
            android:gravity="top"
            android:hint="@string/enter_your_zule_description"
            android:inputType="textMultiLine"
            android:lines="5"
            android:paddingHorizontal="15dp"
            android:paddingVertical="20dp"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/default_font_size" />

        <TextView
            android:id="@+id/media_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/upload_media"
            android:textColor="@color/white"
            android:textSize="@dimen/default_font_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/cbfc_rating"
            android:textColor="@color/white"
            android:textSize="@dimen/default_font_size" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cbfcTags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            tools:itemCount="5"
            tools:listitem="@layout/custom_tags" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre"
            android:textColor="@color/white"
            android:textSize="@dimen/default_font_size" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/genre_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:alignItems="flex_start"
            app:flexWrap="wrap"
            app:justifyContent="flex_start"
            app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
            tools:itemCount="5"
            tools:listitem="@layout/custom_tags" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keywords"
            android:textColor="@color/white"
            android:textSize="@dimen/default_font_size" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/keywords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:background="@drawable/custom_input"
                android:hint="@string/enter_your_zule_keywords"
                android:inputType="text"

                android:paddingHorizontal="15dp"
                android:paddingVertical="20dp"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/default_font_size" />

            <ImageView
                android:id="@+id/add_keyword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="60"
                android:contentDescription="@string/add"
                android:src="@drawable/baseline_add_box_24" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_keywords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:alignItems="flex_start"
            app:flexWrap="wrap"
            app:justifyContent="flex_start"
            app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
            tools:itemCount="5"
            tools:listitem="@layout/custom_tags" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/update_zule"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="5dp"
            app:strokeWidth="0dp"

            >

            <TextView
                android:id="@+id/update_zule_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/update_zule"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </com.google.android.material.card.MaterialCardView>


    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>


