<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none"
    >
<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".CreateZule"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    >


    <include
        android:id="@+id/include"
        layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_zule"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="@dimen/default_font_size"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"/>
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_zule_tile"
        android:paddingHorizontal="15dp"
        android:paddingVertical="20dp"
        android:background="@drawable/custom_input"
        android:textSize="@dimen/default_font_size"
        android:layout_marginTop="5dp"
        android:id="@+id/title"
        android:inputType="text"
        android:textColorHint="@color/grey"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="@dimen/default_font_size"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"/>
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_zule_description"
        android:paddingHorizontal="15dp"
        android:paddingVertical="20dp"
        android:background="@drawable/custom_input"
        android:textSize="@dimen/default_font_size"
        android:layout_marginTop="5dp"
        android:id="@+id/description"
        android:inputType="textMultiLine"
        android:textColorHint="@color/grey"
        android:lines="5"
        android:gravity="top"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_media"
        android:textSize="@dimen/default_font_size"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">


        <RelativeLayout
            android:gravity="center"
            android:id="@+id/thumbnail_16_9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            android:background="@drawable/custom_button_dark"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            app:strokeWidth="0dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thumbnail_16_9"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:id="@+id/thumbnail_16_9_text"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_margin="15dp"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/thumbnail_9_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:strokeWidth="0dp"
            android:background="@drawable/custom_button_dark"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thumbnail_9_16"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_margin="15dp"
                android:id="@+id/thumbnail_9_16_text"
                />
        </RelativeLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <RelativeLayout
            android:id="@+id/zuleVid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            android:background="@drawable/custom_button_dark"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            app:strokeWidth="0dp"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zule_16_9"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_margin="15dp"
                android:id="@+id/zule_text"
                />
        </RelativeLayout>
        <RelativeLayout
            android:gravity="center"
            android:id="@+id/teaserVid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:strokeWidth="0dp"
            android:background="@drawable/custom_button_dark"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teaser_9_16"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_margin="15dp"
                android:id="@+id/teaser_text"
                />


        </RelativeLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cbfc_rating"
        android:textSize="@dimen/default_font_size"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cbfc_tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:itemCount="5"
        tools:listitem="@layout/custom_tags"
        android:layout_marginTop="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre"
        android:textSize="@dimen/default_font_size"
        android:textColor="@color/white"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/genre_tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:itemCount="5"
        tools:listitem="@layout/custom_tags"
        android:layout_marginTop="5dp"
        app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
        app:flexWrap="wrap"
        app:justifyContent="flex_start"
        app:alignItems="flex_start"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keywords"
        android:textSize="@dimen/default_font_size"
        android:textColor="@color/white"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_zule_keywods"
        android:paddingHorizontal="15dp"
        android:paddingVertical="20dp"
        android:background="@drawable/custom_input"
        android:textSize="@dimen/default_font_size"

        android:id="@+id/keywords"
        android:inputType="text"
        android:textColorHint="@color/grey"
        android:layout_weight="10"
        />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/baseline_add_box_24"
            android:contentDescription="@string/add"
            android:layout_weight="60"
            android:id="@+id/add_keyword"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_keywords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:itemCount="5"
        tools:listitem="@layout/custom_tags"
        android:layout_marginTop="5dp"
        app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
        app:flexWrap="wrap"
        app:justifyContent="flex_start"
        app:alignItems="flex_start"/>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/create_zule"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="5dp"
        android:backgroundTint="@color/white"
        app:strokeWidth="0dp"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_zule"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAllCaps="true"
            />
    </com.google.android.material.card.MaterialCardView>

</androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
