<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="@dimen/screen_padding"
    tools:context=".screens.zulespot.CreateZulespot">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/we_appreciate_your_interest_to_become_a_zulist"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/zulespot_title"
        android:textColor="@color/white"
        android:textSize="@dimen/default_font_size" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/zulespotTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_input"
        android:hint="@string/enter_your_zulespot_title"
        android:inputType="text"
        android:paddingHorizontal="15dp"
        android:paddingVertical="20dp"
        android:textColorHint="@color/grey"
        android:textSize="@dimen/default_font_size" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/createZulespot"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Create Zulespot"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </com.google.android.material.card.MaterialCardView>

</androidx.appcompat.widget.LinearLayoutCompat>
